# A2A-mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: demo.toml  oidc.json
config/suppliers/: supplier-a.json  supplier-b.json  supplier-c.json
docs/: A2A_PROFILE.md  ARCHITECTURE.md  CONFIGURATION.md  CURRENT_AUDIT.md  DEMO_SCRIPT.md  EVIDENCE_MODEL.md  IMPLEMENTED_MVP.md  LLM_PROVIDERS.md  MCP_SECURITY.md  MIGRATION_GUIDE.md  MVP_IMPLEMENTATION_ROADMAP.md  MVP_SCOPE.md  NFR.md  PORTFOLIO_CASE.md  PROJECT_PLAN.md  RANKING_POLICY.md  REAL_A2A_CONTOUR.md  RFC-001-trusted-a2a-procurement.md  RUNBOOK.md  SECURITY.md  THREAT_MODEL.md
docs/adr/: 0001-use-a3-as-trusted-control-plane.md  0002-keep-ranking-deterministic.md  0003-require-human-approval-before-award.md  0004-use-approval-snapshot-hash.md  0005-use-sql-outbox-for-business-messages.md  0006-use-closed-agent-registry-for-mvp.md  0007-remove-a3-direct-a1-a2.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
migrations/: env.py
migrations/versions/: 0001_persistent_deals.py  0002_agent_onboarding.py  0003_tracing_and_outbox.py  0004_trusted_vertical_slice.py
schemas/v1/: AgentAttestation.schema.json  AgentCardSnapshot.schema.json  AgentPassport.schema.json  ApprovalRequest.schema.json  ApprovalSnapshot.schema.json  ComparisonResult.schema.json  DeliveryEvent.schema.json  DocumentReference.schema.json  (+22 more)
scripts/: bootstrap_demo.py  check.ps1  demo-reset.ps1  export_schemas.py  smoke_direct_a2a.py
tests/: conftest.py  test_api.py  test_approval.py  test_contracts.py  test_frontend.py  test_llm_config.py  test_mandate_and_decisions.py  test_mcp.py  test_onboarding.py  test_ranking.py  test_security_controls.py
(+37 files in other folders)
