[project]
name = "sber-a2a-procurement"
version = "0.1.0"
description = "Trusted B2B procurement MVP with direct A1-to-A2 communication"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=1.1,<2.0",
    "aiosqlite>=0.21,<1.0",
    "alembic>=1.16,<2.0",
    "asyncpg>=0.30,<1.0",
    "cryptography>=48.0.1,<49.0",
    "fastapi>=0.116,<1.0",
    "fastmcp>=3.0,<4.0",
    "httpx>=0.28,<1.0",
    "jsonschema>=4.24,<5.0",
    "langchain>=1.0,<2.0",
    "langchain-gigachat>=0.3,<1.0",
    "langchain-openrouter>=0.2.5,<1.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "sqlalchemy[asyncio]>=2.0.41,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.scripts]
a2a-api = "sber_a2a.main:run"
a2a-client-agent = "sber_a2a.a1_service:run"
a2a-trust-api = "sber_a2a.trust_api:run"
a2a-demo = "sber_a2a.demo:run"
a2a-supplier = "sber_a2a.suppliers.a2a_service:run"

[dependency-groups]
dev = [
    "pytest>=8.4,<10.0",
    "pytest-asyncio>=1.1,<2.0",
    "pytest-cov>=6.2,<8.0",
    "ruff>=0.12,<1.0",
    "mypy>=1.16,<2.0",
    "bandit>=1.8,<2.0",
    "pip-audit>=2.9,<3.0",
    "types-jsonschema>=4.24,<5.0",
    "types-protobuf>=6.30,<7.0",
]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
packages = ["sber_a2a"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sber_a2a"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF001"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
